# GeneticAlgorithm

./: .gitignore  .readthedocs.yaml  README.adoc  README.md  setup.cfg  setup.py
Data/: GAmult_0_tfuncwheelers_ridge_bsize64_sim0.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim13.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim14.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim16.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim19.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim3.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim4.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim5.txt  GAmult_0_tfuncwheelers_ridge_bsize64_sim7.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim0.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim1.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim14.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim15.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim18.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim19.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim2.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim5.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim7.txt  GAmult_1_tfuncwheelers_ridge_bsize64_sim8.txt  resdata4_100_1000.txt  resdata4_100_10000.txt  resdata4_10_100.txt  tdataGA_4.txt  tdataGA_5.txt  tdataGAmult_0_tfunctfx.txt
dfmcontrol/: DFM_opt_alg.py  __init__.py  cross_funcs.py  examplefile.py  examplelab.py  genetic_alg_mirror.py  gradient_descent.py  helper.py  log.py  main.py  mutation.py  pop.py  population_initatilisation.py  selection_funcs.py  test.py
okotech_lib/: dm.py  influence_matrix.npy  influence_matrix100.npy
src/: DFM_opt_alg.py  GAmult_0_tfuncwheelers_ridge_bsize64_sim1.txt  (+77 more)
(+270 files in other folders)
