[metadata]
name = dfmcontrol
version = 0.2
license=MIT
author = Adrian van Eik
author_email = vaneikadrian@gmail.com
description = A package containing routines to implement a genetic algorithm on a deformable mirror, made for usage within the quantum optics group at KTH.
long_description = file: README.adoc
long_description_content_type = text/markdown
[options]
packages_dir =
    dfmcontrol
packages = find:
install_requires=
    numpy
    pandas
    matplotlib
    scipy
tests_require=pytest
zip_safe = False
[options.packages.find]
where = dfmcontrol